# AquaQuest

./: README.md
Documentacao/: comandos.txt  erros_de_instalacao.txt
Frontend/: app.json  declarations.d.ts  package-lock.json  package.json
Frontend/app/: _layout.tsx  index.tsx  login.tsx
Frontend/app/(tabs)/: _layout.tsx  history.tsx  i.tsx  index.tsx  profile.tsx  quest.tsx
Frontend/app/auth/: _layout.tsx  login.tsx  register.tsx
Frontend/app/components/: HistoryContext.tsx
Frontend/app/context/: HistoryContext.tsx  ProfileContext.tsx
Frontend/app/provisorio/: chat.tsx
Frontend/app/services/: api.js
Frontend/app/tabs/: _layout.tsx  home.tsx  profile.tsx  quest.tsx
Frontend/app/utils/: historyUtils.ts  waterUtils.ts
backend/: .coverage  .env  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/api/: app.py  database.py  security.py  settings.py
backend/api/models/: base.py  historyModel.py  profileModel.py  userModel.py
backend/api/routes/: auth.py  history.py  profile.py  user.py
backend/api/schemas/: historySchema.py  profileSchema.py  userSchema.py
backend/migrations/: env.py
backend/migrations/versions/: 4babb7182167_criando_tabela_de_historico_2.py  5cdef1234567_alterando_historico_para_waterregister.py  9fd336756165_initial.py  a5061f311a51_criando_tabela_de_historico.py  bcb11f0de7e9_create_tables.py
backend/tests/: test_app.py
